<resources>
    <string name="app_name" translatable="false">Driver App</string>
    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_subtitle" translatable="false">ABONA Deutschland GmbH</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_log_out" translatable="false">Log out</string>
    <string name="action_send_doc" translatable="false">Send document</string>
    <string name="task_txt_placeholder" translatable="false">Pick up*</string>
    <string name="task_duein_placeholder" translatable="false">0 d 11h 41m*</string>
    <string name="task_finish_placeholder" translatable="false">15 sep 2020*</string>
    <string name="task_address_one_placeholder" translatable="false">UA, Kyiv, (lon, lat)</string>
    <string name="task_address_two_placeholder" translatable="false">Some str. 121/3</string>
    <string name="txt_due_in" translatable="false">Due in</string>
    <string name="txt_finish" translatable="false">Finish</string>
    <string name="txt_address" translatable="false">Address</string>
    <string name="txt_order" translatable="false">Order</string>
    <string name="txt_order_placeholder" translatable="false">2020/138/45*</string>
    <string name="button_to_activities" translatable="false">Activities</string>
    <string name="pending">Pending</string>
    <string name="running">Running</string>
    <string name="cmr">CMR</string>
    <string name="completed">Completed</string>
    <string name="label_new">NEW</string>
    <string name="label_updated">UPDATED</string>
    <string name="label_deleted">DELETED</string>
    <string name="label_changed">CHANGED</string>
    <string name="label_done">DONE</string>
    <string name="activity_txt_placeholder" translatable="false">Driving to loading*</string>
    <string name="activity_next" translatable="false">Next</string>
    <string name="activity_start" translatable="false">Start</string>
    <string name="activity_finish" translatable="false">Finish</string>
    <string name="action_type_pick_up">Pick Up</string>
    <string name="action_type_drop_off">Drop Off</string>
    <string name="action_type_tractor_swap">Tractor Swap</string>
    <string name="action_type_general">General</string>
    <string name="action_type_delay">Delay</string>
    <string name="action_type_changed_by_a" translatable="false">Changed by Abona</string>
    <string name="action_type_unknown">Unknown</string>
    <string name="need_permissions" translatable="false">Need Permissions!</string>
    <string name="error_from_server" translatable="false">Error while parsing data from server</string>
    <string name="screen_login" translatable="false">Login</string>
    <string name="screen_home" translatable="false">Tasks</string>
    <string name="screen_task_info" translatable="false">Task Info</string>
    <string name="screen_danger_goods" translatable="false">Dangerous goods</string>
    <string name="screen_map" translatable="false">Map</string>
    <string name="screen_activities" translatable="false">Activities</string>
    <string name="screen_documents" translatable="false">Documents</string>
    <string name="screen_delay_reason" translatable="false">Delay Reason</string>
    <string name="screen_settings" translatable="false">Settings</string>
    <string name="need_log_in" translatable="false">First log in</string>
    <string name="error_log_in" translatable="false">Error while log in</string>
    <string name="name_hint" translatable="false">Login</string>
    <string name="password_hint" translatable="false" >Password</string>
    <string name="client_id_hint" translatable="false">Client ID</string>
    <string name="set_test_data" translatable="false">Set test data</string>
    <string name="name_test" translatable="false">manyvehicles@abona-erp.com</string>
    <string name="password_test" translatable="false">1234qwerQWER,.-</string>
    <string name="fcmChannelId" translatable="false">FCM Channel</string>
    <string name="fcmTitle" translatable="false">Firebase notification</string>
    <string name="dialog_server_error_title" translatable="false">Error:</string>
        <string name="app_company" translatable="false">ABONA Deutschland GmbH</string>
        <string name="rest_api" translatable="false">REST-API</string>
        <string name="email_support" translatable="false">logging@abona-erp.com</string>
        <string name="useragent_appname" translatable="false">ABONA Driver App</string>
        <string name="tab_text_pending" translatable="false">Pending</string>
        <string name="tab_text_running" translatable="false">Running</string>
        <string name="tab_text_cmr" translatable="false">CMR</string>
        <string name="tab_text_completed" translatable="false">Completed</string>
        <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
        <string name="notification_channel_id" translatable="false">default</string>
        <string name="geofence_not_available" translatable="false">Geofence service is not available now</string>
        <string name="geofence_too_many_geofences" translatable="false">Your app has registered too many geofences</string>
        <string name="geofence_too_many_pending_intents" translatable="false">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
        <string name="unknown_geofence_error" translatable="false">
        Unknown error: the Geofence service is not available now
    </string>
        <string name="geofence_transition_invalid_type" translatable="false">
        Geofence transition error: invalid transition type %1$d
    </string>
        <string name="geofence_transition_entered" translatable="false">Entered</string>
        <string name="geofence_transition_exited" translatable="false">Exited</string>
        <string name="unknown_geofence_transition" translatable="false">Unknown Transition</string>
        <string name="geofence_transition_notification_text" translatable="false">
        Click notification to return to app
    </string>
        <string name="insufficient_permissions" translatable="false">Insufficient permissions.</string>
        <string name="permission_rationale" translatable="false">Location permission is needed for core functionality</string>
        <string name="permission_denied_explanation" translatable="false">Permission was denied, but is needed for core
        functionality.</string>
        <string name="label_brush" translatable="false">Brush</string>
        <string name="label_save" translatable="false">Save</string>
        <string name="lat" translatable="false">Lat</string>
        <string name="lng" translatable="false">Lng</string>
        <string name="alt" translatable="false">Alt</string>
        <string name="action_cancel">Cancel</string>
        <string name="action_ok">OK</string>
        <string name="action_save">Save</string>
        <string name="action_upload">Upload</string>
        <string name="action_delete">Delete</string>
        <string name="action_warning">Warning</string>
        <string name="action_start">Start</string>
        <string name="action_open">Open</string>
        <string name="action_download">Download</string>
        <string name="action_exit">Exit</string>
        <string name="action_quit">Quit</string>
        <string name="action_upload_photos">Upload Photos?</string>
        <string name="action_upload_photos_message">Would you like to upload the photos?</string>
        <string name="action_uploading_photos">Uploading photos&#8230;</string>
        <string name="action_delete_photo">Delete photo?</string>
        <string name="action_delete_photo_message">Are you sure you want to delete this photo?</string>
        <string name="action_photo_no_longer_exists">Photo no longer exists!</string>
        <string name="action_photo_damaged">Photo damaged or no longer exists!</string>
        <string name="action_start_order">Start task</string>
        <string name="action_start_task_msg">Do you want to start the task?</string>
        <string name="menu_protocol">Protocol</string>
        <string name="menu_settings">Settings</string>
        <string name="key_taskId" translatable="false">taskID</string>
        <string name="key_orderNo" translatable="false">orderNo</string>
        <string name="menu_history">History</string>
        <string name="history_email_theme" translatable="false">Activity history</string>
        <string name="csv_attached" translatable="false">CSV file attached to email:</string>
        <string name="error_history_email" translatable="false">email client not found, please install mail app.</string>
        <string name="ph_time" translatable="false">15:43 21.12.20</string>
        <string name="ph_message" translatable="false">Driving to unloading</string>
        <string name="ph_task_id" translatable="false">1234</string>
        <string name="ph_order_no" translatable="false">2020/15/152</string>
        <string name="progress_bar_placeholder" translatable="false">Syncing&#8230;</string>
        <string name="menu_about">About</string>
        <string name="action_lets_start">Let\'s Start</string>
        <string name="action_security_code">Security Code</string>
        <string name="action_security_code_message">Enter the security code.</string>
        <string name="action_warning_notice">Warning notice</string>
        <string name="client_id_is_not_active">Client-ID is not active!</string>
        <string name="no_internet">No Internet!</string>
        <string name="action_next">Next Step</string>
        <string name="action_finished">Finished</string>
        <string name="action_start_activity">Start</string>
        <string name="action_close">Close</string>
        <string name="action_previous_task_message">You have to complete the previous task first!</string>
        <string name="action_update">Update</string>
        <string name="action_update_message">Update completed!</string>
        <string name="action_exception_on_rest_api">Exception on REST-API!</string>
        <string name="action_later">Later</string>
        <string name="action_not_confirmed" translatable="false">Not confirmed</string>
        <string name="action_erledict" translatable="false">Erledigt</string>
        <string name="action_deleted" translatable="false">Deleted</string>
        <string name="next">Next</string>
        <string name="start">Start</string>
        <string name="document_type">Dokument Type</string>
        <string name="document_type_na">No (N/A)</string>
        <string name="document_type_pod">Proof of Delivery (POD)</string>
        <string name="document_type_cmr">CMR</string>
        <string name="document_type_pn">Pallets Note (PN)</string>
        <string name="document_type_sc">Safety Certificate (SC)</string>
        <string name="document_type_si">Shipment Image (SI)</string>
        <string name="document_type_dsi">Damaged Shipment Image (DSI)</string>
        <string name="document_type_dvi">Damaged Vehicle Image (DVI)</string>
        <string name="editing_camera">Camera</string>
        <string name="editing_category">Category</string>
        <string name="editing_tools">Tools</string>
        <string name="editing_brush">Brush</string>
        <string name="editing_text">Text</string>
        <string name="editing_eraser">Eraser</string>
        <string name="editing_undo">Undo</string>
        <string name="editing_redo">Redo</string>
        <string name="yes">Yes</string>
        <string name="no">No</string>
        <string name="search">Search</string>
        <string name="map">Map</string>
        <string name="camera">Camera</string>
        <string name="order_no">Order No</string>
        <string name="notes">Notes</string>
</resources>