<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.abona_erp.driverapp.ui.fhome.HomeFragment"
        android:label="@string/screen_home"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_nav_home_to_loginFragment"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/action_nav_home_to_taskInfoFragment"
            app:destination="@id/taskInfoFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_activities"
            app:destination="@id/nav_activities" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.abona_erp.driverapp.ui.flogin.LoginFragment"
        android:label="@string/screen_login"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_activities"
        android:name="com.abona_erp.driverapp.ui.factivities.DriverActFragment"
        android:label="@string/screen_activities"
        tools:layout="@layout/driver_act_fragment" />

    <fragment
        android:id="@+id/nav_documents"
        android:name="com.abona_erp.driverapp.ui.fdocuments.DocumentsFragment"
        android:label="@string/screen_documents"
        tools:layout="@layout/documents_fragment" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.abona_erp.driverapp.ui.fsettings.SettingsFragment"
        android:label="@string/screen_settings"
        tools:layout="@layout/settings_fragment" />


    <fragment
        android:id="@+id/taskInfoFragment"
        android:name="com.abona_erp.driverapp.ui.ftaskInfo.TaskInfoFragment"
        android:label="@string/screen_task_info"
        tools:layout="@layout/task_info_fragment">
        <argument
            android:name="task_entity"
            app:argType="com.abona_erp.driverapp.data.local.db.TaskEntity" />
    </fragment>

</navigation>